Comprehensive security hardening from full code review
Fixes 14 CRITICAL + 47 HIGH issues identified in the strict code review.
All changes are organized by root cause below.

== Plugin sandbox overhaul (CRITICAL) ==
- Introduce FilteringHostClassLoader: wraps parent ClassLoader to filter
  com.pmcl.core.* and sensitive java.* (Runtime/ProcessBuilder/System)
  access, closing the parent.loadClass bypass (C1)
- Add PluginSecurityPolicy: snapshots signing policy at init into final
  fields, ignores runtime System.setProperty overrides (C3)
- PluginPackageBuilder: enforce signature verification on .ppk packages
  and lib/*.jar dependencies, fail-closed by default (C2, H2)
- PluginManager: verify .class signers against trusted fingerprint list,
  not just descriptor signer (H1); expand JVM arg blocklist to cover
  -XX:StartFlightRecording/-XX:VMOptionsFile/-Xlog:file (H8)
- PluginIsolatingClassLoader: reject java.lang.Runtime/ProcessBuilder
  by default, require explicit EXEC_COMMAND permission (H6)
- PluginApiFacades: add outbound domain audit logging for HttpApi (H9)
- PluginPathSandbox: expand DENIED_TOP_LEVEL to versions/instances/logs
  /crash-reports/saves/screenshots (H10)
- PluginThreadTracker: track and forcibly stop residual threads on
  uninstall to prevent ClassLoader leak and use-after-unload (H4)
- PluginManager.call/runInPlugin: add configurable timeout for
  LaunchHook chain to prevent permanent UI blocking (H5)
- Reject contributeClasspathJars from untrusted plugins; require
  signed mod JARs for game classpath injection (H7)

== P2P end-to-end encryption (CRITICAL) ==
- New FriendCrypto: X25519 ECDH key agreement + Ed25519 identity
  signatures + AES-256-GCM message encryption (C4-C6, C9)
- New FriendSecureChannel: wraps FriendChatClient/Server transport,
  encrypts all chat/signaling, authenticates peer identity
- FriendIdentity: bind Ed25519 public key to identity, replace
  plain SHA-256 derivation
- FriendProtocol: remove plaintext authSecret field